--- a/syntax.css
+++ b/syntax.css
@@ -1,5 +1,22 @@
+/*********************
+*
+* Author: Caylene
+* Date: 1/8/2019
+*
+**********************/
+
+/*style all P tags */
 
 p{
     font-size: 12px;
     color: blue;
+}
+
+#header p {
+    font-size: 24px;
+}
+
+/*style all header tags */
+h1 {
+    font-size: 44px;
 }
